# Agentcore-Project

./: .bedrock_agentcore.yaml  .gitignore  00_langgraph_agent.py  01_agentcore_runtime.py  README.md  agentcore_memory.py  agentcore_runtime.py  build_index.py  desktop.ini  input.json  jio_faq.csv  langgraph_agent.py  pyproject.toml  streamlit_app.py  style.css  utils.py
.bedrock_agentcore/agent_with_memory/: dependencies.hash
.bedrock_agentcore/agentcore_lang_runtime/: dependencies.hash
faiss_index/: index.faiss  index.pkl
workflow_image/: agentcore_workflow.html
